# NeoMIFES

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  NeoMIFES_要件定義書.md  README.md
.github/workflows/: ci.yml
cmake/: CompileOptions.cmake  Dependencies.cmake  Sanitizers.cmake  TestDependencies.cmake
docs/decisions/: ADR-001-build-system.md  ADR-002-regex-engine.md  ADR-003-syntax-definition.md  ADR-004-http-client.md  ADR-005-min-msvc-version.md  ADR-006-piece-tree-implementation.md  ADR-007-piece-tree-mutable-rb.md  ADR-008-com-raii-comptr.md  ADR-009-deferred-device-init.md  ADR-010-render-depends-on-document.md  ADR-011-phase3c-render-cache-scope.md  ADR-012-phase4a-editor-core-scope.md  ADR-013-json-library.md  ADR-014-syntax-engine-tree-sitter.md  README.md
docs/design/: basic_design.md  detailed_design.md  master_roadmap.md  self_review.md
docs/handoff/: RESUME_HERE.md
docs/history/: TIMELINE.md
docs/issues/: cmake_msvc_runtime_library_fragility.md  lazy_decode_mmap.md  line_index_o_log_n.md  match_highlight_linear_scan_scaling.md  piece_table_rb_tree.md  replace_all_buffer_snapshot_extract_scaling.md  search_crlf_line_ending.md  search_utf8_convert_minor_cleanup.md  text_layout_cache_unbounded_growth.md  undo_stack_unbounded_memory.md
docs/phase_reports/: phase_0.5_report.md  phase_1_report.md  phase_2a_report.md  phase_2b_report.md  phase_3_report.md
src/: .clang-tidy  CMakeLists.txt
src/app/: CMakeLists.txt  document_open.cpp  editor_input.cpp  frame_profile.cpp  frame_profile.h  main.cpp  startup_profile.cpp  startup_profile.h
src/app/include/neomifes/app/: document_open.h  editor_input.h  grep_query_builder.h  grep_result_formatting.h  syntax_language.h  tag_jump.h
src/core/: CMakeLists.txt
src/core/include/neomifes/core/: bookmark_manager.h  command.h  command_dispatcher.h  cumulative_shift_edit.h  cursor.h  edit_commands.h  indentation_conversion.h  replace_all_command.h  search_history.h  selection_model.h  undo_stack.h  viewport.h
src/core/src/: bookmark_manager.cpp  command_dispatcher.cpp  cumulative_shift_edit.cpp  edit_commands.cpp  indentation_conversion.cpp  replace_all_command.cpp  search_history.cpp  selection_model.cpp  undo_stack.cpp  viewport.cpp
src/document/: CMakeLists.txt
src/document/include/neomifes/document/: add_buffer.h  buffer_snapshot.h  document.h  file_loader.h  line_index.h  original_buffer.h  piece.h  piece_table.h  piece_tree.h  text_pos.h
src/document/src/: add_buffer.cpp  buffer_snapshot.cpp  document.cpp  file_loader.cpp  line_index.cpp  original_buffer.cpp  piece_table.cpp  piece_tree.cpp
src/encoding/: CMakeLists.txt
src/encoding/include/neomifes/encoding/: encoding.h
src/encoding/src/: encoding.cpp
src/platform/: CMakeLists.txt
src/platform/include/neomifes/platform/: app_data_dir.h  clipboard.h  codepage_convert.h  file_mapping.h  handle_guard.h  perf_clock.h  process_metrics.h
src/platform/src/: app_data_dir.cpp  clipboard.cpp  codepage_convert.cpp  file_mapping.cpp  perf_clock.cpp  process_metrics.cpp
src/render/: CMakeLists.txt
src/render/include/neomifes/render/: d2d_factories.h  render_device.h  render_error.h  render_pipeline.h  resize_math.h  syntax_worker.h  text_layout_cache.h  viewport_math.h
src/render/src/: d2d_factories.cpp  render_device.cpp  render_error.cpp  render_pipeline.cpp  syntax_worker.cpp  text_layout_cache.cpp
src/search/: CMakeLists.txt
src/search/include/neomifes/search/: grep_service.h  replacement.h  search_service.h
src/search/src/: grep_service.cpp  replacement.cpp  search_service.cpp
src/syntax/: CMakeLists.txt
src/syntax/include/neomifes/syntax/: syntax.h
src/syntax/src/: syntax.cpp
src/ui/: CMakeLists.txt
src/ui/include/neomifes/ui/: click_tracking.h  command_descriptor.h  command_palette.h  command_palette_filter.h  find_bar.h  find_navigation.h  goto_line_bar.h  goto_line_parser.h  grep_bar.h  main_window.h
src/ui/src/: command_palette.cpp  find_bar.cpp  goto_line_bar.cpp  grep_bar.cpp  main_window.cpp
src/util/: CMakeLists.txt
src/util/include/neomifes/util/: fuzzy_matcher.h  glob_match.h  tag_jump_parser.h  utf8_convert.h  version.h  wchar_cast.h
src/util/src/: fuzzy_matcher.cpp  glob_match.cpp  tag_jump_parser.cpp  utf8_convert.cpp  version.cpp
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  core_undo_stack_bench.cpp  document_load_bench.cpp  document_piece_table_bench.cpp  render_text_layout_cache_bench.cpp  search_find_all_bench.cpp  syntax_parse_bench.cpp  util_version_bench.cpp
tests/integration/: CMakeLists.txt  frame_measure_test.cpp  platform_clipboard_test.cpp  render_device_smoke_test.cpp  render_syntax_worker_test.cpp  render_text_smoke_test.cpp  startup_measure_test.cpp
tests/unit/: CMakeLists.txt  app_document_open_test.cpp  app_editor_input_test.cpp  app_grep_query_builder_test.cpp  app_grep_result_formatting_test.cpp  app_syntax_language_test.cpp  app_tag_jump_test.cpp  core_bookmark_manager_test.cpp  core_command_dispatcher_test.cpp  core_edit_commands_test.cpp  core_indentation_conversion_test.cpp  core_replace_all_command_test.cpp  core_search_history_test.cpp  core_selection_model_test.cpp  core_undo_stack_test.cpp  core_viewport_test.cpp  document_add_buffer_test.cpp  document_buffer_snapshot_test.cpp  document_document_test.cpp  document_file_loader_test.cpp  document_line_index_test.cpp  document_piece_table_test.cpp  document_piece_tree_test.cpp  document_property_test.cpp  encoding_encoding_test.cpp  platform_app_data_dir_test.cpp  platform_codepage_convert_test.cpp  platform_file_mapping_test.cpp  platform_perf_clock_test.cpp  platform_process_metrics_test.cpp  render_error_test.cpp  render_resize_math_test.cpp  render_text_layout_cache_test.cpp  render_viewport_math_test.cpp  search_grep_service_test.cpp  search_replacement_test.cpp  search_search_service_test.cpp  syntax_syntax_test.cpp  ui_click_tracking_test.cpp  ui_command_palette_filter_test.cpp  (+8 more)
